# mpf-plugin-rules

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: rules_plugin.h
src/: rules_plugin.cpp
